22w07a first pass